feat: add another router in swagger
